@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1451 2003/09/11 18:08:35 druzus Exp $
+ * $Id: ChangeLog,v 1.1452 2003/09/11 22:13:21 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-11 15:12 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/vm/hvm.c
+  * source/vm/memvars.c
+    ! fixed memvar access under MT.
 
 2003-09-11 18:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * source/clipsamp/gauge.c
